--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear --cors", 
-    "deploy": "cp -r public docs"
+    "start": "sirv public --no-clear --cors",
+    "deploy": "cp -r public docs",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll"
   },
+  "type": "module",
+
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "jest": "^27.4.7",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
